Fix scroll issue on mobile homepage, where homepage right was scrolling behind homepage left

--- a/resources/styles/components/_buttons.scss
+++ b/resources/styles/components/_buttons.scss
@@ -31,3 +31,7 @@ button {
 #seeAllRoasts {
   margin-left: 0;
 }
+
+#addFlavor {
+  margin-right: 0;
+}
